--- a/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
+++ b/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
@@ -96,11 +96,12 @@
                         <outlet property="nameLabel" destination="Pso-UO-8B3" id="RGU-HO-cY0"/>
                         <outlet property="profileLabel" destination="g2S-yD-DKD" id="Nrf-OL-GRl"/>
                         <outlet property="settingsLabel" destination="wTs-JB-7xp" id="Nyr-nu-yRt"/>
+                        <segue destination="AsE-tt-14X" kind="show" identifier="menuToSettings" id="NRn-ec-Qde"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3sW-1w-nfD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1239" y="492"/>
+            <point key="canvasLocation" x="1212" y="535"/>
         </scene>
         <!--Home Page View Controller-->
         <scene sceneID="kU6-BC-mQQ">
@@ -123,7 +124,72 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K4T-fz-7LI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="345" y="-218"/>
+            <point key="canvasLocation" x="313" y="-218"/>
+        </scene>
+        <!--Settings Table View Controller-->
+        <scene sceneID="6vz-eb-x01">
+            <objects>
+                <tableViewController storyboardIdentifier="settingsViewController" id="AsE-tt-14X" customClass="SettingsTableViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="fgf-Pe-SNK">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <navigationBar key="tableHeaderView" contentMode="scaleToFill" id="o0Z-Q2-sH6">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <items>
+                                <navigationItem id="auw-vs-MAG">
+                                    <barButtonItem key="leftBarButtonItem" title="Back" style="plain" id="swq-Qc-RcV">
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <action selector="backPressed:" destination="AsE-tt-14X" id="7OV-Xn-K0k"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </navigationItem>
+                            </items>
+                        </navigationBar>
+                        <sections>
+                            <tableViewSection id="3xY-q1-jRx">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="XSE-LS-XWD">
+                                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XSE-LS-XWD" id="SVe-ux-Gpy">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eag-jN-2wx">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="20"/>
+                                                    <state key="normal" title="Log out">
+                                                        <color key="titleColor" red="0.58992513020000004" green="0.050320095490000001" blue="0.59589301220000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="logoutPressed:" destination="AsE-tt-14X" eventType="touchUpInside" id="fY0-Oj-mmG"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="eag-jN-2wx" secondAttribute="bottom" id="6Fr-3L-rLv"/>
+                                                <constraint firstItem="eag-jN-2wx" firstAttribute="top" secondItem="SVe-ux-Gpy" secondAttribute="top" id="e1O-Ig-TMI"/>
+                                                <constraint firstItem="eag-jN-2wx" firstAttribute="leading" secondItem="SVe-ux-Gpy" secondAttribute="leading" id="jL2-fN-Kpz"/>
+                                                <constraint firstAttribute="trailing" secondItem="eag-jN-2wx" secondAttribute="trailing" id="l8J-uh-HFH"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="AsE-tt-14X" id="ata-Bj-1OP"/>
+                            <outlet property="delegate" destination="AsE-tt-14X" id="CuR-K8-CjI"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="s6g-JB-Cop" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1212" y="-218"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="6Eq-2h-Bfu">
