--- a/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
+++ b/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14087.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BPF-CG-GQP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BPF-CG-GQP">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14075.4"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -199,56 +198,64 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="old-9w-9iN">
-                                <rect key="frame" x="24" y="323" width="367" height="91"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Deu-xk-Igf">
+                                <rect key="frame" x="30" y="195" width="354" height="391"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="WLO-Xq-HGL">
-                                        <rect key="frame" x="0.0" y="0.0" width="367" height="44.666666666666664"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eye" translatesAutoresizingMaskIntoConstraints="NO" id="QIz-pm-2iw">
+                                        <rect key="frame" x="127" y="0.0" width="100" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="dZB-4p-2IW"/>
+                                            <constraint firstAttribute="width" constant="100" id="fk0-PL-Ikf"/>
+                                        </constraints>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Zit-Qf-7ft">
+                                        <rect key="frame" x="0.0" y="50" width="354" height="341"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="foresight-white" translatesAutoresizingMaskIntoConstraints="NO" id="a6B-pi-d7f">
-                                                <rect key="frame" x="0.0" y="0.0" width="367" height="44.666666666666664"/>
+                                                <rect key="frame" x="27" y="0.0" width="300" height="200"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" secondItem="a6B-pi-d7f" secondAttribute="height" multiplier="74:9" id="T6p-Cx-beK"/>
+                                                    <constraint firstAttribute="height" constant="200" id="1Si-G6-whW"/>
+                                                    <constraint firstAttribute="width" constant="300" id="bkX-gN-rMP"/>
                                                 </constraints>
                                             </imageView>
-                                        </subviews>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="MER-W9-IKv">
-                                        <rect key="frame" x="4" y="48.666666666666686" width="359" height="42.333333333333343"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Crowdsourcing perspectives on global matters" textAlignment="center" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3fF-o8-Hb3">
-                                                <rect key="frame" x="0.0" y="0.0" width="359" height="16.666666666666668"/>
-                                                <fontDescription key="fontDescription" name="Futura-MediumItalic" family="Futura" pointSize="17"/>
-                                                <color key="textColor" red="0.65490196078431373" green="0.61176470588235299" blue="0.65490196078431373" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Swipe left to learn more" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IfV-xG-znS">
-                                                <rect key="frame" x="0.0" y="22.666666666666629" width="359" height="19.666666666666671"/>
-                                                <fontDescription key="fontDescription" name="Futura-MediumItalic" family="Futura" pointSize="15"/>
-                                                <color key="textColor" red="0.40392156862745099" green="0.38039215686274508" blue="0.40392156862745099" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="iWA-V3-hwV">
+                                                <rect key="frame" x="0.0" y="200" width="354" height="141"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Crowdsourcing perspectives on global matters" textAlignment="center" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3fF-o8-Hb3">
+                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="121"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="20" id="AsD-mF-IjT"/>
+                                                            <constraint firstAttribute="width" constant="354" id="kcQ-oe-s5D"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" name="Futura-MediumItalic" family="Futura" pointSize="12"/>
+                                                        <color key="textColor" red="0.65490196078431373" green="0.61176470588235299" blue="0.65490196078431373" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe left to learn more" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cSA-hX-8wa">
+                                                        <rect key="frame" x="94.333333333333329" y="121" width="165.33333333333337" height="20"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="20" id="uuz-KY-kqa"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" name="Futura-MediumItalic" family="Futura" pointSize="15"/>
+                                                        <color key="textColor" red="0.4039215686" green="0.3803921569" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
                                         </subviews>
                                     </stackView>
                                 </subviews>
-                            </stackView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eye" translatesAutoresizingMaskIntoConstraints="NO" id="QIz-pm-2iw">
-                                <rect key="frame" x="155" y="270" width="102" height="35"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="35" id="MgS-EV-POC"/>
+                                    <constraint firstAttribute="trailing" secondItem="Zit-Qf-7ft" secondAttribute="trailing" id="ESI-Gq-aAg"/>
                                 </constraints>
-                            </imageView>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.12549019607843137" green="0.12549019607843137" blue="0.12549019607843137" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="old-9w-9iN" firstAttribute="top" secondItem="QIz-pm-2iw" secondAttribute="bottom" constant="18" id="4ZQ-al-CaY"/>
-                            <constraint firstItem="old-9w-9iN" firstAttribute="centerY" secondItem="wge-gi-0mh" secondAttribute="centerY" id="C5T-Pn-XBN"/>
-                            <constraint firstItem="NOa-5o-SN3" firstAttribute="trailing" secondItem="old-9w-9iN" secondAttribute="trailing" constant="23.670000000000002" id="JOl-Ca-h6X"/>
-                            <constraint firstItem="old-9w-9iN" firstAttribute="centerX" secondItem="wge-gi-0mh" secondAttribute="centerX" id="Q7v-DP-SSw"/>
-                            <constraint firstItem="old-9w-9iN" firstAttribute="leading" secondItem="NOa-5o-SN3" secondAttribute="leading" constant="23.670000000000002" id="SD2-zL-iKF"/>
-                            <constraint firstItem="QIz-pm-2iw" firstAttribute="leading" secondItem="NOa-5o-SN3" secondAttribute="leading" constant="155" id="hEj-wG-mVu"/>
-                            <constraint firstItem="NOa-5o-SN3" firstAttribute="trailing" secondItem="QIz-pm-2iw" secondAttribute="trailing" constant="157" id="mOs-CH-ztB"/>
-                            <constraint firstItem="QIz-pm-2iw" firstAttribute="top" secondItem="NOa-5o-SN3" secondAttribute="top" constant="250" id="wZm-zG-BWk"/>
+                            <constraint firstItem="NOa-5o-SN3" firstAttribute="trailing" secondItem="Deu-xk-Igf" secondAttribute="trailing" constant="30" id="EG6-Uj-qck"/>
+                            <constraint firstItem="Deu-xk-Igf" firstAttribute="leading" secondItem="NOa-5o-SN3" secondAttribute="leading" constant="30" id="Y1I-Cr-aKa"/>
+                            <constraint firstItem="Deu-xk-Igf" firstAttribute="top" secondItem="NOa-5o-SN3" secondAttribute="top" constant="175" id="iML-xE-ksu"/>
+                            <constraint firstItem="NOa-5o-SN3" firstAttribute="bottom" secondItem="Deu-xk-Igf" secondAttribute="bottom" constant="150" id="t0S-cr-Map"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NOa-5o-SN3"/>
                     </view>
