--- a/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
+++ b/LynxApp/LynxApp/View/Base.lproj/Main.storyboard
@@ -152,7 +152,7 @@
                                                 <rect key="frame" x="0.0" y="200" width="354" height="141"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Crowdsourcing perspectives on global matters" textAlignment="center" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3fF-o8-Hb3">
-                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="20"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="121.33333333333333"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="AsD-mF-IjT"/>
                                                             <constraint firstAttribute="width" constant="354" id="kcQ-oe-s5D"/>
@@ -162,7 +162,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe left to learn more" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cSA-hX-8wa">
-                                                        <rect key="frame" x="94.333333333333329" y="20" width="165.33333333333337" height="121"/>
+                                                        <rect key="frame" x="94.333333333333329" y="121.33333333333339" width="165.33333333333337" height="19.666666666666671"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="uuz-KY-kqa"/>
                                                         </constraints>
@@ -203,7 +203,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="zVV-ia-fkx">
-                                <rect key="frame" x="30" y="195" width="354" height="391"/>
+                                <rect key="frame" x="30" y="194.99999999999997" width="354" height="285.33333333333326"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eye" translatesAutoresizingMaskIntoConstraints="NO" id="WPD-0f-V0X">
                                         <rect key="frame" x="127" y="0.0" width="100" height="50"/>
@@ -213,7 +213,7 @@
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="EcU-Jm-djg">
-                                        <rect key="frame" x="0.0" y="50" width="354" height="341"/>
+                                        <rect key="frame" x="0.0" y="50.000000000000014" width="354" height="235.33333333333337"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="foresight-white" translatesAutoresizingMaskIntoConstraints="NO" id="c79-6x-xkf">
                                                 <rect key="frame" x="27" y="0.0" width="300" height="200"/>
@@ -223,10 +223,10 @@
                                                 </constraints>
                                             </imageView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="EGR-hO-yOP">
-                                                <rect key="frame" x="0.0" y="200" width="354" height="141"/>
+                                                <rect key="frame" x="0.0" y="200" width="354" height="35.333333333333343"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Crowdsourcing perspectives on global matters" textAlignment="center" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kla-ax-jH3">
-                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="20"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="15.666666666666666"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="DGs-Z4-9W8"/>
                                                             <constraint firstAttribute="width" constant="354" id="RVd-q2-Cxj"/>
@@ -236,7 +236,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe left to learn more" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7eu-Mr-oeA">
-                                                        <rect key="frame" x="94.333333333333329" y="20" width="165.33333333333337" height="121"/>
+                                                        <rect key="frame" x="94.333333333333329" y="15.666666666666631" width="165.33333333333337" height="19.666666666666671"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="8fn-0y-8Oe"/>
                                                         </constraints>
@@ -277,7 +277,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="aH4-om-gTh">
-                                <rect key="frame" x="30" y="195.00000000000003" width="354" height="289.66666666666674"/>
+                                <rect key="frame" x="30" y="194.99999999999997" width="354" height="285.33333333333326"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eye" translatesAutoresizingMaskIntoConstraints="NO" id="y3E-Ym-312">
                                         <rect key="frame" x="127" y="0.0" width="100" height="50"/>
@@ -287,7 +287,7 @@
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="sQi-N1-niJ">
-                                        <rect key="frame" x="0.0" y="50.000000000000043" width="354" height="239.66666666666663"/>
+                                        <rect key="frame" x="0.0" y="50.000000000000014" width="354" height="235.33333333333337"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="foresight-white" translatesAutoresizingMaskIntoConstraints="NO" id="cgZ-Jz-gUm">
                                                 <rect key="frame" x="27" y="0.0" width="300" height="200"/>
@@ -297,10 +297,10 @@
                                                 </constraints>
                                             </imageView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="EJF-eU-w1H">
-                                                <rect key="frame" x="0.0" y="200" width="354" height="39.666666666666657"/>
+                                                <rect key="frame" x="0.0" y="200" width="354" height="35.333333333333343"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Crowdsourcing perspectives on global matters" textAlignment="center" lineBreakMode="characterWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zeK-rV-uYY">
-                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="20"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="354" height="15.666666666666666"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="354" id="8zy-qp-LJb"/>
                                                             <constraint firstAttribute="height" constant="20" id="gkr-HQ-H97"/>
@@ -310,7 +310,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe left to learn more" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G4c-aV-IaO">
-                                                        <rect key="frame" x="94.333333333333329" y="19.999999999999943" width="165.33333333333337" height="19.666666666666671"/>
+                                                        <rect key="frame" x="94.333333333333329" y="15.666666666666629" width="165.33333333333337" height="19.666666666666671"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="20" id="KuC-Bw-JGH"/>
                                                         </constraints>
@@ -353,7 +353,6 @@
         <!--Parent Explore View Controller-->
         <scene sceneID="pfh-Io-1TB">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="0t9-Jl-ewY" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="exploreEventsParent" id="beu-Ig-pJe" customClass="ParentExploreViewController" customModule="LynxApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PlV-kp-fcU">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
@@ -388,6 +387,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="OTW-Ip-K7K"/>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0t9-Jl-ewY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2890" y="288"/>
         </scene>
@@ -406,7 +406,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="exploreEventCell" id="ZbK-QA-5Zi" customClass="ExploreEventCollectionViewCell" customModule="LynxApp" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" reuseIdentifier="exploreEventCell" id="ZbK-QA-5Zi" customClass="ExploreEventCollectionViewCell" customModule="LynxApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -414,7 +414,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hyF-O1-7xc">
-                                            <rect key="frame" x="8" y="8" width="184" height="184"/>
+                                            <rect key="frame" x="8" y="8" width="184" height="24"/>
                                         </imageView>
                                     </subviews>
                                 </view>
@@ -1211,6 +1211,7 @@
                             <constraint firstItem="wEr-Dr-62M" firstAttribute="leading" secondItem="YwL-0q-kS8" secondAttribute="leading" id="KSx-Xd-omb"/>
                             <constraint firstAttribute="bottom" secondItem="wEr-Dr-62M" secondAttribute="bottom" constant="10" id="fy9-yY-76u"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="5Hq-MY-CYe"/>
                     </view>
                     <connections>
                         <outlet property="accuracyLabel" destination="59d-Fr-hDc" id="yTN-RS-Zhq"/>
